# swift-tui-android

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  build.gradle.kts  prek.toml  settings.gradle.kts
android-plugin/: build.gradle.kts
android-plugin/src/main/kotlin/: sh.swifttui.android.gradle.kts
sh/swifttui/android-host/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
sh/swifttui/android-host/0.0.19/: android-host-0.0.19-sources.jar.md5  android-host-0.0.19.aar  android-host-0.0.19.aar.md5  android-host-0.0.19.module  android-host-0.0.19.module.md5  android-host-0.0.19.module.sha1  android-host-0.0.19.module.sha256  android-host-0.0.19.module.sha512  android-host-0.0.19.pom  android-host-0.0.19.pom.md5  android-host-0.0.19.pom.sha1  android-host-0.0.19.pom.sha256  android-host-0.0.19.pom.sha512
sh/swifttui/android-host/0.0.20/: android-host-0.0.20.aar  android-host-0.0.20.aar.md5  android-host-0.0.20.aar.sha1  android-host-0.0.20.aar.sha256  android-host-0.0.20.aar.sha512  android-host-0.0.20.module  android-host-0.0.20.module.md5  android-host-0.0.20.module.sha1  android-host-0.0.20.module.sha256  android-host-0.0.20.module.sha512  android-host-0.0.20.pom  android-host-0.0.20.pom.md5  android-host-0.0.20.pom.sha1  android-host-0.0.20.pom.sha256  (+1 more)
sh/swifttui/android-plugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
swift-tui-host/: build.gradle.kts
tools/bazel/: native_gate.sh
(+276 files in other folders)
